--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,5 +3,6 @@
   "@appTitle": {
     "description": "app title"
   },
-  "homeTitle": "home"
+  "homeTitle": "home",
+  "bookFilePathSetting": "edax book file path setting"
 }
