--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -4,5 +4,8 @@
     "description": "app title"
   },
   "homeTitle": "home",
-  "bookFilePathSetting": "edax book file path setting"
+  "bookFilePathSetting": "edax book file path setting",
+  "license": "LICENSE",
+  "cancelOnDialog": "Cancel",
+  "updateSettingOnDialog": "Update"
 }
