configable book.dat path (#27)
* add link about App sandbox on Mac
* add link about Harded Runtime on Mac
* add link. it is archived, but helpful
* add link about windows-sandbok
* for now, disable mac app sandbox
* improve comment
* configable book file path
* disable sandbox Release not only DebugProfile
* upgrade libedax4dart
* mock SharedPreferences when integration test
* load book file when book file path is changed
* localize
* close DynamicLibrary of libedax4dart
* enhance/refactor test

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,5 +3,9 @@
   "@appTitle": {
     "description": "app title"
   },
-  "homeTitle": "home"
+  "homeTitle": "home",
+  "bookFilePathSetting": "edax book file path setting",
+  "license": "LICENSE",
+  "cancelOnDialog": "Cancel",
+  "updateSettingOnDialog": "Update"
 }
