--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -1,4 +1,8 @@
 {
   "appTitle": "pedax",
-  "homeTitle": "home"
+  "homeTitle": "home",
+  "bookFilePathSetting": "edax の book ファイルのパス設定",
+  "license": "ライセンス",
+  "cancelOnDialog": "キャンセル",
+  "updateSettingOnDialog": "更新する"
 }
