fix book file path setting form

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -7,5 +7,6 @@
   "bookFilePathSetting": "edax book file path setting",
   "license": "LICENSE",
   "cancelOnDialog": "Cancel",
-  "updateSettingOnDialog": "Update"
+  "updateSettingOnDialog": "Update",
+  "userSpecifiedFileNotFound": "the file is not found"
 }
