--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -1,7 +1,7 @@
 {
   "appTitle": "pedax",
   "homeTitle": "home",
-  "bookFilePathSetting": "edax の book ファイルのパス設定",
+  "bookFilePathSetting": "book ファイルのパス設定",
   "license": "ライセンス",
   "cancelOnDialog": "キャンセル",
   "updateSettingOnDialog": "更新する",
