--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -1,6 +1,6 @@
 {
   "appTitle": "pedax",
-  "homeTitle": "home",
+  "analysisMode": "解析モード",
   "bookFilePathSetting": "book ファイルのパス",
   "license": "ライセンス",
   "cancelOnDialog": "キャンセル",
