--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,7 +3,7 @@
   "@appTitle": {
     "description": "app title"
   },
-  "homeTitle": "home",
+  "analysisMode": "analysis mode",
   "bookFilePathSetting": "edax book file path",
   "license": "LICENSE",
   "cancelOnDialog": "Cancel",
