--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -7,5 +7,7 @@
   "updateSettingOnDialog": "更新する",
   "userSpecifiedFileNotFound": "指定したファイルが見つかりません",
   "nTasksSetting": "並列スレッド数 (上級者向け)",
-  "levelSetting": "レベル (検索の深さ)"
+  "levelSetting": "レベル (検索の深さ)",
+  "loadingBookFile": "book を読み込み中...",
+  "finishedLoadingBookFile": "book の読み込みが終わりました ＼(^o^)／"
 }
