--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -11,6 +11,8 @@
   "userSpecifiedFileNotFound": "the file is not found",
   "nTasksSetting": "number of parallel threads [advanced option]",
   "levelSetting": "level (search depth)",
+  "hintStepByStepSetting": "step-by-step hint",
+  "hintStepByStepDescription": "If true, pedax show hints step-by-step.\nAlthough this is useful, total search time is longer.",
   "loadingBookFile": "loading book file ...",
   "finishedLoadingBookFile": "book file has been loaded ＼(^o^)／"
 }
