--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -8,6 +8,8 @@
   "userSpecifiedFileNotFound": "指定したファイルが見つかりません",
   "nTasksSetting": "並列スレッド数 (上級者向け)",
   "levelSetting": "レベル (検索の深さ)",
+  "hintStepByStepSetting": "評価値の段階表示",
+  "hintStepByStepDescription": "オンにすると、レベル設定を上限として、評価値を段階的に表示します。\nこれは便利ですが、結果的に解析時間は長くなります。",
   "loadingBookFile": "book を読み込み中...",
   "finishedLoadingBookFile": "book の読み込みが終わりました ＼(^o^)／"
 }
