--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -1,5 +1,6 @@
 {
   "appTitle": "pedax",
+  "initializingEngine": "エンジンの立ち上げ中...",
   "analysisMode": "解析モード",
   "bookFilePathSetting": "book ファイルのパス",
   "license": "ライセンス",
