support vmirror command

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -31,5 +31,6 @@
   "shortcutLabelRedo": "redo",
   "shortcutLabelSwitchHintVisiblity": "switch hint visiblity",
   "shortcutLabelUndoAll": "undo all",
-  "shortcutLabelUndo": "undo"
+  "shortcutLabelUndo": "undo",
+  "shortcutLabelVmirror": "vertical mirror"
 }
