--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -28,5 +28,6 @@
   "shortcutLabelRedo": "一手進む",
   "shortcutLabelSwitchHintVisiblity": "評価値の ON/OFF を切り替える",
   "shortcutLabelUndoAll": "初手まで戻す",
-  "shortcutLabelUndo": "一手戻す"
+  "shortcutLabelUndo": "一手戻す",
+  "shortcutLabelVmirror": "上下反転させる"
 }
