Finally, I can run pedax on mac sandbox

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -32,5 +32,6 @@
   "shortcutLabelSwitchHintVisiblity": "switch hint visiblity",
   "shortcutLabelUndoAll": "undo all",
   "shortcutLabelUndo": "undo",
-  "shortcutLabelRotate180": "rotate 180"
+  "shortcutLabelRotate180": "rotate 180",
+  "chooseBookFile": "choose"
 }
