--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -29,5 +29,6 @@
   "shortcutLabelSwitchHintVisiblity": "評価値の ON/OFF を切り替える",
   "shortcutLabelUndoAll": "初手まで戻す",
   "shortcutLabelUndo": "一手戻す",
-  "shortcutLabelRotate180": "180 度回転させる"
+  "shortcutLabelRotate180": "180 度回転させる",
+  "chooseBookFile": "選ぶ"
 }
