use file_selector for book.dat of user, and enable macos app Sandbox (#67)
* add document link about macos app sandbox
* mild upgrade provider package
* add file_selector on dependencies
* mild fix log message
* mild fix l10n
* mild upgrade libedax4dart
* remove unnecessary log
* add entitlement for reading files specieied by user
* enable macos Sandbox
* add log about edax initialization
* add macos_secure_bookmarks on dependencies
* To enable bookmarking, change entitlement com.apple.security.files.user-selected.read-"write".
If read-only, app can't bookmark
* add comment for developer
* upgrade macos_secure_bookmarks
* add document link
* Finally, I can run pedax on mac sandbox
* fix integration test
* update screenshot on README

--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -7,7 +7,7 @@
   "cancelOnDialog": "キャンセル",
   "updateSettingOnDialog": "更新する",
   "userSpecifiedFileNotFound": "指定したファイルが見つかりません",
-  "nTasksSetting": "並列スレッド数 (上級者向け)",
+  "nTasksSetting": "並列スレッド数 [上級者向け]",
   "levelSetting": "レベル (検索の深さ)",
   "hintStepByStepSetting": "評価値の段階表示",
   "hintStepByStepDescription": "オンにすると、レベル設定を上限として、評価値を段階的に表示します。\nこれは便利ですが、結果的に解析時間は長くなります。",
@@ -29,5 +29,6 @@
   "shortcutLabelSwitchHintVisiblity": "評価値の ON/OFF を切り替える",
   "shortcutLabelUndoAll": "初手まで戻す",
   "shortcutLabelUndo": "一手戻す",
-  "shortcutLabelRotate180": "180 度回転させる"
+  "shortcutLabelRotate180": "180 度回転させる",
+  "chooseBookFile": "選ぶ"
 }
