add l10n of noPositionInfo

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -24,6 +24,7 @@
       "drawRate": { "type": "int", "format": "compact" }
     }
   },
+  "noPositionInfo": "📓 nothing",
   "shortcutCheatsheet": "shortcut cheatsheet",
   "shortcutLabelCopyMoves": "copy moves",
   "shortcutLabelPasteMoves": "paste moves",
