--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -19,9 +19,9 @@
   "positionInfo": "📓 full: {fullNum}. (win: {winRate}%, draw: {drawRate}%)",
   "@positionInfo": {
     "placeholders": {
-      "fullNum": { "type": "int", "format": "compact" },
-      "winRate": { "type": "int", "format": "compact" },
-      "drawRate": { "type": "int", "format": "compact" }
+      "fullNum": { "type": "int", "format": "decimalPattern" },
+      "winRate": { "type": "int", "format": "decimalPattern" },
+      "drawRate": { "type": "int", "format": "decimalPattern" }
     }
   },
   "noPositionInfo": "📓 nothing",
