--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -16,7 +16,7 @@
   "hintStepByStepDescription": "If true, pedax show hints step-by-step.\nAlthough this is useful, total search time is longer.",
   "loadingBookFile": "loading book file ...",
   "finishedLoadingBookFile": "book file has been loaded ＼(^o^)／",
-  "positionInfo": "📓 full: {fullNum}. (win: {winRate}%, draw: {drawRate}%)",
+  "positionInfo": "📓 full: {fullNum} (win: {winRate}%, draw: {drawRate}%)",
   "@positionInfo": {
     "placeholders": {
       "fullNum": { "type": "int", "format": "decimalPattern" },
