--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -16,12 +16,12 @@
   "hintStepByStepDescription": "If true, pedax show hints step-by-step.\nAlthough this is useful, total search time is longer.",
   "loadingBookFile": "loading book file ...",
   "finishedLoadingBookFile": "book file has been loaded ＼(^o^)／",
-  "positionInfo": "📓 full: {fullNum}. (win: {winRate}%, draw: {drawRate}%)",
+  "positionInfo": "📓 full: {fullNum} (win: {winRate}%, draw: {drawRate}%)",
   "@positionInfo": {
     "placeholders": {
-      "fullNum": { "type": "int", "format": "compact" },
-      "winRate": { "type": "int", "format": "compact" },
-      "drawRate": { "type": "int", "format": "compact" }
+      "fullNum": { "type": "int", "format": "decimalPattern" },
+      "winRate": { "type": "int", "format": "decimalPattern" },
+      "drawRate": { "type": "int", "format": "decimalPattern" }
     }
   },
   "noPositionInfo": "📓 nothing",
