--- a/website/docs/markdown-features.mdx
+++ b/website/docs/markdown-features.mdx
@@ -37,14 +37,6 @@ Let's see how to [Create a page](./create-a-page.md).
 
 Regular Markdown images are supported.
 
-Add an image at `static/img/docusaurus.png` and use this Markdown declaration:
-
-```md
-![Docusaurus logo](/img/docusaurus.png)
-```
-
-![Docusaurus logo](/img/docusaurus.png)
-
 ## Code Blocks
 
 Markdown code blocks are supported with Syntax highlighting.
@@ -59,7 +51,7 @@ Markdown code blocks are supported with Syntax highlighting.
 
 ```jsx title="src/components/HelloDocusaurus.js"
 function HelloDocusaurus() {
-  return <h1>Hello, Docusaurus!</h1>;
+  return <h1>Hello, Docusaurus!</h1>
 }
 ```
 
@@ -111,18 +103,18 @@ export const Highlight = ({children, color}) => (
 <Highlight color="#25c2a0">Docusaurus green</Highlight> and <Highlight color="#1877F2">Facebook blue</Highlight> are my favorite colors.
 ```
 
-export const Highlight = ({children, color}) => (
+export const Highlight = ({ children, color }) => (
   <span
     style={{
       backgroundColor: color,
       borderRadius: '2px',
       color: '#fff',
       padding: '0.2rem',
-    }}>
+    }}
+  >
     {children}
   </span>
-);
+)
 
-<Highlight color="#25c2a0">Docusaurus green</Highlight> and <Highlight color="#1877F2">
-  Facebook blue
-</Highlight> are my favorite colors.
+<Highlight color="#25c2a0">Docusaurus green</Highlight> and <Highlight color="#1877F2">Facebook blue</Highlight> are my favorite
+colors.
