--- a/website/i18n/en/code.json
+++ b/website/i18n/en/code.json
@@ -1,4 +1,7 @@
 {
+  "installation_page_title": {
+    "message": "installation"
+  },
   "pedax_description": {
     "message": "othello Board GUI with edax"
   },
