fix description of app

--- a/website/i18n/en/code.json
+++ b/website/i18n/en/code.json
@@ -3,7 +3,7 @@
     "message": "installation"
   },
   "pedax_description": {
-    "message": "Othello Board with edax"
+    "message": "Reversi Board with edax"
   },
   "analysis_mode_board_title": {
     "message": "Comfortable View"
