--- a/website/i18n/ja/code.json
+++ b/website/i18n/ja/code.json
@@ -1,6 +1,6 @@
 {
   "installation_page_title": {
-    "message": "インストール"
+    "message": ""
   },
   "pedax_description": {
     "message": "edax 用のリバーシ盤"
