--- a/website/i18n/ja/code.json
+++ b/website/i18n/ja/code.json
@@ -33,6 +33,6 @@
     "message": "https://apps.apple.com/jp/app/pedax/id1557500142"
   },
   "microsoft_store_link": {
-    "message": "changeme"
+    "message": "https://www.microsoft.com/store/apps/9NLNZCKH0L9H"
   }
 }
