top page title meta

--- a/website/i18n/en/code.json
+++ b/website/i18n/en/code.json
@@ -1,6 +1,6 @@
 {
   "installation_page_title": {
-    "message": "top"
+    "message": " "
   },
   "pedax_description": {
     "message": "Reversi Board with edax"
