add l10n, dialog, menu, model

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -13,7 +13,9 @@
   "nTasksSetting": "number of parallel threads [advanced option]",
   "levelSetting": "level (search depth)",
   "hintStepByStepSetting": "step-by-step hint",
-  "hintStepByStepDescription": "If true, pedax show hints step-by-step.\nAlthough this is useful, total search time is longer.",
+  "hintStepByStepDescription": "If on, pedax show hints step-by-step.\nAlthough this is useful, total search time is longer.",
+  "bestPathNumAvailabilitySetting": "best path num indicator [advanced option]",
+  "bestPathNumAvailabilityDescription": "[This feature is preview]\nIf on, pedax show the indicator \"best path num\".\nYou have to understand https://sensuikan1973.github.io/libedax4dart/libedax4dart/LibEdax/computeBestPathNumWithLink.html.\nIn preview, level is fixed 10.",
   "loadingBookFile": "loading book file ...",
   "finishedLoadingBookFile": "book file has been loaded ＼(^o^)／",
   "positionInfo": "📓 full: {fullNum}",
