--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -11,6 +11,8 @@
   "levelSetting": "レベル (検索の深さ)",
   "hintStepByStepSetting": "評価値の段階表示",
   "hintStepByStepDescription": "オンにすると、レベル設定を上限として、評価値を段階的に表示します。\nこれは便利ですが、結果的に解析時間は長くなります。",
+  "bestPathNumAvailabilitySetting": "最小暗記数指標 [上級者向け]",
+  "bestPathNumAvailabilityDescription": "[この機能はプレビュー版です]\nオンにすると、最小暗記数の指標を表示します。\nこの機能を理解するには https://sensuikan1973.github.io/libedax4dart/libedax4dart/LibEdax/computeBestPathNumWithLink.html を読む必要があります.\nなお、プレビュー版では level が 10 で固定されています。",
   "loadingBookFile": "book を読み込み中...",
   "finishedLoadingBookFile": "book の読み込みが終わりました ＼(^o^)／",
   "positionInfo": "📓 完全: {fullNum}",
