--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -15,7 +15,8 @@
   "hintStepByStepSetting": "step-by-step hint",
   "hintStepByStepDescription": "If on, pedax show hints step-by-step.\nAlthough this is useful, total search time is longer.",
   "bestPathNumAvailabilitySetting": "best path num indicator [advanced option]",
-  "bestPathNumAvailabilityDescription": "[This feature is preview]\nIf on, pedax show the indicator \"best path num\".\nYou have to understand https://sensuikan1973.github.io/libedax4dart/libedax4dart/LibEdax/computeBestPathNumWithLink.html.\nIn preview, level is fixed 10.",
+  "bestPathNumAvailabilityDescription": "[This feature is preview]\nIf on, pedax show the indicator \"best path num\".\nYou have to read technical document. \nIn preview, level is fixed 10.",
+  "bestPathNumAvailabilityDocumentationLink": "open documentation link",
   "loadingBookFile": "loading book file ...",
   "finishedLoadingBookFile": "book file has been loaded ＼(^o^)／",
   "positionInfo": "📓 full: {fullNum}",
