--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -12,7 +12,7 @@
   "hintStepByStepSetting": "評価値の段階表示",
   "hintStepByStepDescription": "オンにすると、レベル設定を上限として、評価値を段階的に表示します。\nこれは便利ですが、結果的に解析時間は長くなります。",
   "bestPathNumAvailabilitySetting": "最小暗記数指標 [上級者向け]",
-  "bestPathNumAvailabilityDescription": "[この機能はプレビュー版です]\nオンにすると、必要な最小暗記数の指標が「(黒に必要な最小暗記数, 白に必要な最小暗記数)」というフォーマットで表示されます。\nこの指標は、お互いに book 内包の最善手しか打たないと仮定した時に、どれだけの進行数を覚えていれば絶対に負けないか、を任意の探索深度に基づいて算出したものです。\nこの機能を適切に理解するには、下記の技術ドキュメントを読む必要があります。なお、プレビュー版では level が 10 で固定されています。",
+  "bestPathNumAvailabilityDescription": "[この機能はプレビュー版です]\nオンにすると、「(黒に必要な最小暗記数, 白に必要な最小暗記数)」というフォーマットで盤上に指標が表示されます。\nこの指標は、お互いに book 内包の最善手しか打たないと仮定した時に、どれだけの進行数を覚えていれば絶対に負けないか、を任意の探索深度に基づいて算出したものです。\nこの機能を適切に理解するには、下記の技術ドキュメントを読む必要があります。なお、プレビュー版では level が 10 で固定されています。",
   "bestPathNumAvailabilityDocumentationLink": "ドキュメントを読む",
   "loadingBookFile": "book を読み込み中...",
   "finishedLoadingBookFile": "book の読み込みが終わりました ＼(^o^)／",
