--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -14,8 +14,8 @@
   "levelSetting": "level (search depth)",
   "hintStepByStepSetting": "step-by-step hint",
   "hintStepByStepDescription": "If on, pedax show hints step-by-step.\nAlthough this is useful, total search time is longer.",
-  "bestpathCountAvailabilitySetting": "best path num indicator [advanced option]",
-  "bestpathCountAvailabilityDescription": "[This feature is preview]\nIf on, pedax show the indicator \"best path num\".\nYou have to read technical document. \nIn preview, level is fixed 8.",
+  "bestpathCountAvailabilitySetting": "bestpath count indicator [advanced option]",
+  "bestpathCountAvailabilityDescription": "[This feature is preview]\nIf on, pedax show the indicator \"bestpath count\".\nYou have to read technical document. \nIn preview, level is fixed 8.",
   "bestpathCountAvailabilityDocumentationLink": "open documentation link",
   "loadingBookFile": "loading book file ...",
   "finishedLoadingBookFile": "book file has been loaded ＼(^o^)／",
