--- a/macos/fastlane/metadata/en-US/release_notes.txt
+++ b/macos/fastlane/metadata/en-US/release_notes.txt
@@ -1,1 +1,1 @@
-[new feature] add new indicator which show bestpath count.
+Fixed a bug in which the minimum memorized number indicator could display incorrect values when the book was loading.
