--- a/macos/fastlane/metadata/en-US/release_notes.txt
+++ b/macos/fastlane/metadata/en-US/release_notes.txt
@@ -1,1 +1,1 @@
-Fixed a bug in which the minimum memorized number indicator could display incorrect values when the book was loading.
+minor improvement of performance.
