--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -2,6 +2,7 @@
   "appTitle": "pedax",
   "initializingEngine": "エンジンの立ち上げ中...",
   "analysisMode": "解析モード",
+  "arrangeMode": "盤面配置モード",
   "bookFilePathSetting": "book ファイルのパス",
   "about": "このアプリについて",
   "cancelOnDialog": "キャンセル",
