--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -5,9 +5,8 @@
   },
   "initializingEngine": "initializing engine...",
   "modeSelectionTooltip": "show mode selection",
-  "freeplayMode": "freeplay mode",
-  "analysisMode": "analysis mode",
-  "arrangeMode": "disc arrange mode",
+  "freePlayMode": "free play mode",
+  "arrangeDiscsMode": "disc arrange mode",
   "bookFilePathSetting": "edax book file path",
   "about": "About pedax",
   "cancelOnDialog": "Cancel",
