disc arrange mode (#228)
* add l10n

* define mode

* read board mode

* button appbar title

* appbar selection button

* mild rename

* read api response

* mild refactoring. condition.

* mild refactoring null handling

* remove no prospect comment

* add init shortcut

* change menu order

* add  shortcut

* fix change logic

* fix mode

* indent

* upgrade libedax4dart

* setboard phase1 implement

* fix shortcut definition missing

* fix naming

* mild fix naming

* arrange disc mode implement phase2

* fix logic to show hint list

* refactoring inappropriate dependencies of SquareType

* flutter analyze

* mild fix naming

* update libedax asset

* upgrade libedax asset

* add test

* fix test

* mild fix helper

* Revert "fix test"

This reverts commit 8aa763dfe8399731a048719103a70d02e7df61ca.

* fix test

* fix test

* enhance test

* mild fix border width

* mild fix null handling

* mild change test command format

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -4,7 +4,9 @@
     "description": "app title"
   },
   "initializingEngine": "initializing engine...",
-  "analysisMode": "analysis mode",
+  "modeSelectionTooltip": "show mode selection",
+  "freePlayMode": "free play mode",
+  "arrangeDiscsMode": "disc arrange mode",
   "bookFilePathSetting": "edax book file path",
   "about": "About pedax",
   "cancelOnDialog": "Cancel",
@@ -41,5 +43,7 @@
   "shortcutLabelUndoAll": "undo all",
   "shortcutLabelUndo": "undo",
   "shortcutLabelRotate180": "rotate 180",
+  "shortcutLabelInit": "init board",
+  "shortcutLabelNew": "new board based on disc arranges",
   "chooseBookFile": "choose"
 }
