--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -41,6 +41,6 @@
   "shortcutLabelUndo": "一手戻す",
   "shortcutLabelRotate180": "180 度回転させる",
   "shortcutLabelInit": "完全な新規局面にする",
-  "shortcutLabelNew": "盤面配置の情報をもとに、新規局面にする",
+  "shortcutLabelNew": "盤面配置に基づいた新規局面にする",
   "chooseBookFile": "選ぶ"
 }
