--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -42,5 +42,6 @@
   "shortcutLabelRotate180": "180 度回転させる",
   "shortcutLabelInit": "完全な新規局面にする",
   "shortcutLabelNew": "盤面配置に基づいた新規局面にする",
+  "shortcutLabelCaptureBoardImageShorcut": "盤面画像をクリップボードにキャプチャ",
   "chooseBookFile": "選ぶ"
 }
