--- a/macos/fastlane/metadata/en-US/release_notes.txt
+++ b/macos/fastlane/metadata/en-US/release_notes.txt
@@ -1,6 +1,3 @@
-[New Feature].
-- Added board arrange discs mode.
-- Added a shortcut key for board initialization.
-
 [Feature Improvement]
-- The outline of the stones at the bottom of the board is now red to make it easier to see the current turn.
+The shortcut keys for board initialization have been changed.
+Full initialization is "^+I or ⌘+I", and initialization based on arrange discs is "^+N or ⌘+N".
