--- a/macos/fastlane/metadata/en-US/release_notes.txt
+++ b/macos/fastlane/metadata/en-US/release_notes.txt
@@ -1,3 +1,1 @@
-[Feature Improvement]
-The shortcut keys for board initialization have been changed.
-Full initialization is "^+I or ⌘+I", and initialization based on arrange discs is "^+N or ⌘+N".
+minor improvement of performance.
