fix typo Visiblity -> Visibility

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -39,7 +39,7 @@
   "shortcutLabelPasteMoves": "paste moves",
   "shortcutLabelRedoAll": "redo all",
   "shortcutLabelRedo": "redo",
-  "shortcutLabelSwitchHintVisiblity": "switch hint visiblity",
+  "shortcutLabelSwitchHintVisibility": "switch hint Visibility",
   "shortcutLabelUndoAll": "undo all",
   "shortcutLabelUndo": "undo",
   "shortcutLabelRotate180": "rotate 180",
