fix typo custome_options_title -> custom_options_title

--- a/website/i18n/en/code.json
+++ b/website/i18n/en/code.json
@@ -14,7 +14,7 @@
   "analysis_mode_board_description": {
     "message": "Comfortably, you can see evaluation value (e.g.「+0」,「-4」)."
   },
-  "custome_options_title": {
+  "custom_options_title": {
     "message": "customize options"
   },
   "custome_options_view": {
