--- a/website/i18n/ja/code.json
+++ b/website/i18n/ja/code.json
@@ -14,7 +14,7 @@
   "analysis_mode_board_description": {
     "message": "快適な edax ライフを"
   },
-  "custome_options_title": {
+  "custom_options_title": {
     "message": "カスタマイズ可能"
   },
   "custome_options_view": {
