fix typo custome_options_view -> custom_options_view

--- a/website/i18n/ja/code.json
+++ b/website/i18n/ja/code.json
@@ -17,7 +17,7 @@
   "custom_options_title": {
     "message": "カスタマイズ可能"
   },
-  "custome_options_view": {
+  "custom_options_view": {
     "message": "img/ja/custom_options_view.png"
   },
   "custome_options_description": {
