--- a/website/i18n/en/code.json
+++ b/website/i18n/en/code.json
@@ -17,7 +17,7 @@
   "custom_options_title": {
     "message": "customize options"
   },
-  "custome_options_view": {
+  "custom_options_view": {
     "message": "img/en/custom_options_view.png"
   },
   "custome_options_description": {
