add workflow to prevent typos (#409)
* add workflow to prevent typos

* fix

* fix typo waitEdaxServerResponsed -> waitEdaxServerResponse

* fix typo serach -> search

* add config

* mild rename

* fix typo Visiblity -> Visibility

* fix typo ture -> true

* fix typo internaly -> internally

* fix typo custome_options_title -> custom_options_title

* fix typo custome_options_view -> custom_options_view

* fix typo custome_options_description -> custom_options_description

* add ignore files

* fix typo Although -> Although

* mild rename

* mild fix trigger

* add workflow_dispatch:

--- a/website/i18n/en/code.json
+++ b/website/i18n/en/code.json
@@ -14,13 +14,13 @@
   "analysis_mode_board_description": {
     "message": "Comfortably, you can see evaluation value (e.g.「+0」,「-4」)."
   },
-  "custome_options_title": {
+  "custom_options_title": {
     "message": "customize options"
   },
-  "custome_options_view": {
+  "custom_options_view": {
     "message": "img/en/custom_options_view.png"
   },
-  "custome_options_description": {
+  "custom_options_description": {
     "message": "e.g. book file path, step-by-step hint view."
   },
   "mac_app_store_badge": {
