--- a/website/i18n/ja/code.json
+++ b/website/i18n/ja/code.json
@@ -14,13 +14,13 @@
   "analysis_mode_board_description": {
     "message": "快適な edax ライフを"
   },
-  "custome_options_title": {
+  "custom_options_title": {
     "message": "カスタマイズ可能"
   },
-  "custome_options_view": {
+  "custom_options_view": {
     "message": "img/ja/custom_options_view.png"
   },
-  "custome_options_description": {
+  "custom_options_description": {
     "message": "book ファイルや評価値の段階表示などを変更可能"
   },
   "mac_app_store_badge": {
