change microsoft store link

--- a/website/i18n/en/code.json
+++ b/website/i18n/en/code.json
@@ -33,6 +33,6 @@
     "message": "https://apps.apple.com/us/app/pedax/id1557500142"
   },
   "microsoft_store_link": {
-    "message": "https://www.microsoft.com/store/apps/9NLNZCKH0L9H"
+    "message": "https://apps.microsoft.com/store/detail/pedax/9NLNZCKH0L9H"
   }
 }
