add dialog setting

--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -15,8 +15,9 @@
   "hintStepByStepDescription": "レベル設定を上限として、評価値を段階的に表示します。\n途中段階の評価値は半透明で表示されます。\n\nこれは便利ですが、結果的に解析時間は長くなります。",
   "bestpathCountAvailabilitySetting": "最小暗記数指標 [上級者向け]",
   "bestpathCountAvailabilityDescription": "オンにすると、評価値の左下に「黒に必要な最小暗記数」、右下に「白に必要な最小暗記数」の指標が表示されます。\nこの指標は、お互いに book 内包の手のうち、下部設定の範囲内の手しか打たないと仮定した時に、どれだけの進行数を覚えていれば絶対に負けないかを算出したものです。\nただし、book の深さや精度によって指標の信頼度は異なります。",
-  "bestpathCountPlayerLowerLimitDescription": "手番側の選ぶ手の最小評価値 (default: 0)",
-  "bestpathCountOpponentLowerLimitDescription": "相手番側の選ぶ手の最小評価値 (default: 0)",
+  "bestpathCountPlayerLowerLimitDescription": "手番側の選ぶ手の最小評価値",
+  "bestpathCountOpponentLowerLimitDescription": "相手番側の選ぶ手の最小評価値",
+  "bestpathCountLowerLimitSaveButton": "最小評価値の設定を保存する",
   "loadingBookFile": "book を読み込み中...",
   "finishedLoadingBookFile": "book の読み込みが終わりました ＼(^o^)／",
   "positionInfo": "📓 完全: {fullNum}",
