update release note

--- a/macos/fastlane/metadata/en-US/release_notes.txt
+++ b/macos/fastlane/metadata/en-US/release_notes.txt
@@ -1,1 +1,1 @@
-Options have been added regarding the best path count, a feature for advanced users.
+The board can be copied to the clipboard as an image.
