update release note

--- a/macos/fastlane/metadata/en-US/release_notes.txt
+++ b/macos/fastlane/metadata/en-US/release_notes.txt
@@ -1,1 +1,1 @@
-minor improvement of performance.
+The step-by-step evaluation value display function has been fixed, as it was not always semi-transparent.
