--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -16,8 +16,8 @@
   "levelSetting": "level (search depth)",
   "hintStepByStepSetting": "step-by-step hint",
   "hintStepByStepDescription": "If on, pedax show hints step-by-step.\nAlthough this is useful, total search time is longer.",
-  "bestpathCountAvailabilitySetting": "bestpath count indicator [advanced option]",
-  "bestpathCountAvailabilityDescription": "When turned on, the indicator \"Minimum number of memorized moves required for black\" and \"Minimum number of memorized moves required for white\" are displayed in the lower left and lower right corner of the evaluation value, respectively. This indicator is a calculation of how many progressions are required to be memorized to never lose the game, assuming that both players play only moves within the lower settings of the book inclusions. However, the reliability of the indicator depends on the depth and accuracy of the BOOK.",
+  "bestpathCountSetting": "bestpath count indicator [advanced option]",
+  "bestpathCountDescription": "When turned on, the indicator \"Minimum number of memorized moves required for black\" and \"Minimum number of memorized moves required for white\" are displayed in the lower left and lower right corner of the evaluation value, respectively. This indicator is a calculation of how many progressions are required to be memorized to never lose the game, assuming that both players play only moves within the lower settings of the book inclusions. However, the reliability of the indicator depends on the depth and accuracy of the BOOK.",
   "bestpathCountPlayerLowerLimitDescription": "player's lower limit",
   "bestpathCountOpponentLowerLimitDescription": "opponent's lower limit",
   "loadingBookFile": "loading book file ...",
