add shortcut to report local info

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -47,5 +47,6 @@
   "shortcutLabelInit": "init board",
   "shortcutLabelNew": "new board based on disc arranges",
   "shortcutLabelCaptureBoardImageShorcut": "capture board image to clipboard",
+  "shortcutLabelCopyLocalInfo": "copy local info",
   "chooseBookFile": "choose"
 }
