--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -44,5 +44,6 @@
   "shortcutLabelInit": "完全な新規局面にする",
   "shortcutLabelNew": "盤面配置に基づいた新規局面にする",
   "shortcutLabelCaptureBoardImageShorcut": "盤面画像をクリップボードにコピー",
+  "shortcutLabelCopyLocalInfo": "アプリのローカル情報をコピーする",
   "chooseBookFile": "選ぶ"
 }
