Prepare for new Release `4.0.0+84` (#1335)
* Prepare for new Release 4.0.0+84

* update release note

---------

Co-authored-by: sensuikan1973 <sensuikan1973@users.noreply.github.com>

--- a/macos/fastlane/metadata/en-US/release_notes.txt
+++ b/macos/fastlane/metadata/en-US/release_notes.txt
@@ -1,1 +1,4 @@
-minor improvement of stability.
+The following bugs have been fixed.
+
+* A bug that prevented level setting updates from being immediately reflected, requiring a restart, has been fixed.
+* Fixed a bug in which the stp by step hint level increase didn't work and didn't make sense in some situations regarding the display of the rating value steps.
