--- a/macos/fastlane/metadata/ja/release_notes.txt
+++ b/macos/fastlane/metadata/ja/release_notes.txt
@@ -1,4 +1,1 @@
-以下のバグを修正しました。
-
-* レベル設定の更新が即座に反映されず、再起動を必要とするバグがありましたが、即座に反映されるようにしました。
-* 評価値の段階表示について、レベルの段階的な上昇が機能せずに意味をなさない場面があるバグを修正しました。
+安定性向上のための軽微な改善を行いました。
