--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -4,12 +4,14 @@
     "description": "app title"
   },
   "initializingEngine": "initializing engine...",
+  "appleSiliconMacAnnotation": "There's a bug that can cause incorrect evaluation to be displayed only on Apple Silicon Mac. \nIt's recommend that you follow the instructions at https://support.apple.com/ja-jp/HT211861 and 'Open using Rosetta' for pedax.",
   "modeSelectionTooltip": "show mode selection",
   "freePlayMode": "free play mode",
   "arrangeDiscsMode": "disc arrange mode",
   "bookFilePathSetting": "edax book file path",
   "bookFilePathInvalidMessage": "Select ASCII file path",
   "about": "About pedax",
+  "confirmedOnDialog": "Confirmed",
   "cancelOnDialog": "Cancel",
   "updateSettingOnDialog": "Update",
   "userSpecifiedFileNotFound": "the file is not found",
